<resources>
    <string name="app_name">Tic-tac-toe</string>

    <string name="x">X</string>
    <string name="o">O</string>
    <string name="_3x3">3X3</string>
    <string name="_5x5">5X5</string>
    <string name="reset">RESET GAME</string>

    <string name="first_human">You go first.</string>
    <string name="turn_human">Your turn.</string>
    <string name="turn_computer">Android\'s turn.</string>
    <string name="turn_player_one">Player One\'s Turn.</string>
    <string name="turn_player_two">Player Two\'s Turn.</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You Won!</string>
    <string name="result_android_wins">Android Won!</string>
    <string name="result_player_one_wins">Player One Wins!</string>
    <string name="result_player_two_wins">Player Two Wins!</string>
    <string name="human">Human:  </string>
    <string name="player_one">Player One:  </string>
    <string name="ties">Ties:  </string>
    <string name="android">Android:  </string>
    <string name="player_two">Player Two:  </string>

    <string name="newGame_label">New Game</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="draw">DRAW:</string>
    <string name="_1_player">1 Player</string>
    <string name="_2_player">2 Player</string>
    <string name="info">Info</string>
    <string name="exit_game">Exit Game</string>
    <string name="start">Start</string>
</resources>
