<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
              android:background="@drawable/board_pic"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingBottom="24dp"
        android:paddingTop="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:id="@+id/back"
            android:layout_height="wrap_content"
            android:text="  Back To Menu"
            android:layout_marginLeft="8dp"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:drawableLeft="@drawable/backburger"
            android:drawableStart="@drawable/backburger"
        />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="true"
            android:id="@+id/reset_game"
            android:textColor="#fff"
            android:background="#e7be9909"
            android:layout_marginRight="8dp"
            android:padding="5dp"
            android:gravity="center"
        />



    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#e7d6ae0f"
        android:textSize="25sp"
        android:text="Scoreboard"
        android:layout_gravity="center" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Player1:"
                android:textAllCaps="true"
                android:textColor="#20b3dc"
                android:textSize="16sp"
            />

            <TextView
                android:id="@+id/humanCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/draw"
                android:textColor="#e7d6ae0f"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tiesCount"
                android:layout_width="wrap_content"
                android:textColor="#fff"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

            <TextView
                android:id="@+id/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android"
                android:textAllCaps="true"
                android:textColor="#cc4b34"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/androidCount"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

    </TableLayout>

    <TableLayout
        android:id="@+id/playArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/one"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height"/>

            <Button
                android:id="@+id/two"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />

            <Button
                android:id="@+id/three"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/four"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height"/>

            <Button
                android:id="@+id/five"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />

            <Button
                android:id="@+id/six"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/seven"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height"/>

            <Button
                android:id="@+id/eight"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />

            <Button
                android:id="@+id/nine"
                android:layout_width="@dimen/cell_width"
                android:layout_height="@dimen/cell_height" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textColor="#e7d6ae0f"
        android:textStyle="bold|italic"
        android:textSize="25sp"
        android:padding="8dp"
    />

    <Button
        android:id="@+id/play_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="Play again"
        android:textColor="#FFFFFF"
        android:background="#3366FF"
    />

</LinearLayout>
